--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Jason Quense <monastic.panic@gmail.com>",
   "repository": "intljusticemission/react-big-calendar",
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "style": "lib/css/react-big-calendar.css",
   "files": ["lib/", "LICENSE", "README.md", "CHANGELOG.md"],
   "keywords": [
@@ -85,12 +85,12 @@
     "moment": "^2.17.1",
     "mt-changelog": "^0.6.1",
     "prettier": "^1.9.1",
-    "react": "^16.2.0",
+    "react": "^16.4.1",
     "react-bootstrap": "^0.28.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-docgen": "^2.14.1",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.4.1",
     "release-script": "^1.0.0",
     "rimraf": "^2.4.2",
     "webpack": "^3.10.0",
